--- a/site.html
+++ b/site.html
@@ -75,6 +75,7 @@
 			<button class="w3-btn w3-grey" id="sD300">5 minutes</button>
 			<button class="w3-btn w3-grey" id="sD600">10 minutes</button>
 			<button class="w3-btn w3-grey" id="sD1800">30 minutes</button>
+			<button class="w3-btn w3-grey" id="sD0">Off</button>
 			<div class="scheduleTimes">
 				<div>
 					<button class="w3-btn w3-grey" id="s0">00:00</button>
@@ -154,6 +155,7 @@
         	for (let i = 0; i < n; i+=step) answer.push(i)
         	return answer;
         }
+        const sD0 = elem("sD0");
         const sD300 = elem("sD300");
         const sD600 = elem("sD600");
         const sD1800 = elem("sD1800");
@@ -171,15 +173,10 @@
 			"scheduleDuration": 0
 		};
 
-		for (const hourWindow of range(24, 2)) 
-			s[hourWindow].onclick = changeSchedule(hourWindow);
-		sD300.onclick = changeScheduleDuration(300);
-		sD600.onclick = changeScheduleDuration(600);
-		sD1800.onclick = changeScheduleDuration(1800);
-
 	    const updateScheduleUI = () => {
 		    for (const hourWindow of range(24, 2))
-		    	s[hourWindow].changeStyles(state.schedule[hourWindow * 2] === 1);
+		    	s[hourWindow].changeStyles(state.schedule[hourWindow] === 1);
+		    sD0.changeStyles(state.scheduleDuration === 0);
 		    sD300.changeStyles(state.scheduleDuration === 300);
 		    sD600.changeStyles(state.scheduleDuration === 600);
 		    sD1800.changeStyles(state.scheduleDuration === 1800);
@@ -217,6 +214,14 @@
 		const turnOn = (seconds) => get("turnOn/" + seconds);
 		const changeSchedule = (hourWindow) => get("/changeSchedule/" + hourWindow);
 		const changeScheduleDuration = (seconds) => get("/changeScheduleDuration/" + seconds);
+
+		for (const hourWindow of range(24, 2)) 
+			s[hourWindow].onclick = () => changeSchedule(hourWindow);
+		sD0.onclick = () => changeScheduleDuration(0);
+		sD300.onclick = () => changeScheduleDuration(300);
+		sD600.onclick = () => changeScheduleDuration(600);
+		sD1800.onclick = () => changeScheduleDuration(1800);
+
 		setInterval(() => get("state", false), 5000);
 		get("state", false);
 	</script>
