--- a/site.html
+++ b/site.html
@@ -148,7 +148,7 @@
 
         /** @type {Toast} toast */ const toast = new Toast();
 
-        const dev = true;
+        const dev = false;
         const elem = (id) => document.querySelector("#" + id);
         const range = (n, step=1) => {
         	const answer = [];
