--- a/site.html
+++ b/site.html
@@ -58,63 +58,7 @@
 		</style>
 	</head>
 	<body style="padding: 20px">
-		<div class="timeButtons">
-			<button class="w3-btn w3-light-blue" onclick="turnOn(1800)">On</button>
-			<button class="w3-btn w3-red" onclick="turnOff()">Off</button>
-		</div>
-		<div class="timeButtons" style="margin-top: 30px">
-			<div>Status: <span id="status">Off</span></div>
-			<button class="w3-btn w3-light-blue" onclick="turnOn(10)">10 seconds</button>
-			<button class="w3-btn w3-light-blue" onclick="turnOn(60)">1 minute</button>
-			<button class="w3-btn w3-light-blue" onclick="turnOn(120)">2 minute</button>
-			<button class="w3-btn w3-light-blue" onclick="turnOn(180)">3 minute</button>
-			<button class="w3-btn w3-light-blue" onclick="turnOn(300)">5 minutes</button>
-		</div>
-		<div class="timeButtons" style="margin-top: 30px">
-			<div>Schedule:</div>
-			<button class="w3-btn w3-grey" id="sD60">1 minute</button>
-			<button class="w3-btn w3-grey" id="sD120">2 minute</button>
-			<button class="w3-btn w3-grey" id="sD180">3 minute</button>
-			<button class="w3-btn w3-grey" id="sD300">5 minutes</button>
-			<button class="w3-btn w3-grey" id="sD0">Off</button>
-			<div class="scheduleTimes">
-				<div>
-					<button class="w3-btn w3-grey" id="s4">04:00</button>
-					<button class="w3-btn w3-grey" id="s5">05:00</button>
-					<button class="w3-btn w3-grey" id="s6">06:00</button>
-				</div>
-				<div>
-					<button class="w3-btn w3-grey" id="s7">07:00</button>
-					<button class="w3-btn w3-grey" id="s8">08:00</button>
-					<button class="w3-btn w3-grey" id="s9">09:00</button>
-				</div>
-				<div>
-					<button class="w3-btn w3-grey" id="s10">10:00</button>
-					<button class="w3-btn w3-grey" id="s16">16:00</button>
-					<button class="w3-btn w3-grey" id="s17">17:00</button>
-				</div>
-				<div>
-					<button class="w3-btn w3-grey" id="s18">18:00</button>
-					<button class="w3-btn w3-grey" id="s19">19:00</button>
-					<button class="w3-btn w3-grey" id="s20">20:00</button>
-				</div>
-				<div style="display: none">
-					<button class="w3-btn w3-grey" id="s0">00:00</button>
-					<button class="w3-btn w3-grey" id="s1">00:00</button>
-					<button class="w3-btn w3-grey" id="s2">00:00</button>
-					<button class="w3-btn w3-grey" id="s3">00:00</button>
-					<button class="w3-btn w3-grey" id="s11">00:00</button>
-					<button class="w3-btn w3-grey" id="s12">00:00</button>
-					<button class="w3-btn w3-grey" id="s13">00:00</button>
-					<button class="w3-btn w3-grey" id="s14">00:00</button>
-					<button class="w3-btn w3-grey" id="s15">00:00</button>
-					<button class="w3-btn w3-grey" id="s21">00:00</button>
-					<button class="w3-btn w3-grey" id="s22">00:00</button>
-					<button class="w3-btn w3-grey" id="s23">00:00</button>
-				</div>
-			</div>
-		</div>
-		<div style="margin-top: 30px">Activated time today: <span id="activatedTime">0 seconds</span></div>
+		<div id="uis"></div>
 		<div id="toast"></div>
 	</body>
 	<script>
@@ -164,6 +108,69 @@
 
         /** @type {Toast} toast */ const toast = new Toast();
 
+		const generateHtml = (pin) => {
+			const p = `p${pin}-`;
+			return `
+<div class="timeButtons">
+	<button class="w3-btn w3-light-blue" onclick="turnOn(${pin}, 1800)">On</button>
+	<button class="w3-btn w3-red" onclick="turnOff(${pin})">Off</button>
+</div>
+<div class="timeButtons" style="margin-top: 30px">
+	<div>Status: <span id="${p}status">Off</span></div>
+	<button class="w3-btn w3-light-blue" onclick="turnOn(${pin}, 10)">10 seconds</button>
+	<button class="w3-btn w3-light-blue" onclick="turnOn(${pin}, 60)">1 minute</button>
+	<button class="w3-btn w3-light-blue" onclick="turnOn(${pin}, 120)">2 minute</button>
+	<button class="w3-btn w3-light-blue" onclick="turnOn(${pin}, 180)">3 minute</button>
+	<button class="w3-btn w3-light-blue" onclick="turnOn(${pin}, 300)">5 minutes</button>
+</div>
+<div class="timeButtons" style="margin-top: 30px">
+	<div>Schedule:</div>
+	<button class="w3-btn w3-grey" id="${p}sD60">1 minute</button>
+	<button class="w3-btn w3-grey" id="${p}sD120">2 minute</button>
+	<button class="w3-btn w3-grey" id="${p}sD180">3 minute</button>
+	<button class="w3-btn w3-grey" id="${p}sD300">5 minutes</button>
+	<button class="w3-btn w3-grey" id="${p}sD0">Off</button>
+	<div class="scheduleTimes">
+		<div>
+			<button class="w3-btn w3-grey" id="${p}s4">04:00</button>
+			<button class="w3-btn w3-grey" id="${p}s5">05:00</button>
+			<button class="w3-btn w3-grey" id="${p}s6">06:00</button>
+		</div>
+		<div>
+			<button class="w3-btn w3-grey" id="${p}s7">07:00</button>
+			<button class="w3-btn w3-grey" id="${p}s8">08:00</button>
+			<button class="w3-btn w3-grey" id="${p}s9">09:00</button>
+		</div>
+		<div>
+			<button class="w3-btn w3-grey" id="${p}s10">10:00</button>
+			<button class="w3-btn w3-grey" id="${p}s15">15:00</button>
+			<button class="w3-btn w3-grey" id="${p}s16">16:00</button>
+		</div>
+		<div>
+			<button class="w3-btn w3-grey" id="${p}s17">17:00</button>
+			<button class="w3-btn w3-grey" id="${p}s18">18:00</button>
+			<button class="w3-btn w3-grey" id="${p}s19">19:00</button>
+		</div>
+		<div style="display: none">
+			<button class="w3-btn w3-grey" id="${p}s0">00:00</button>
+			<button class="w3-btn w3-grey" id="${p}s1">00:00</button>
+			<button class="w3-btn w3-grey" id="${p}s2">00:00</button>
+			<button class="w3-btn w3-grey" id="${p}s3">00:00</button>
+			<button class="w3-btn w3-grey" id="${p}s11">00:00</button>
+			<button class="w3-btn w3-grey" id="${p}s12">00:00</button>
+			<button class="w3-btn w3-grey" id="${p}s13">00:00</button>
+			<button class="w3-btn w3-grey" id="${p}s14">00:00</button>
+			<button class="w3-btn w3-grey" id="${p}s20">20:00</button>
+			<button class="w3-btn w3-grey" id="${p}s21">00:00</button>
+			<button class="w3-btn w3-grey" id="${p}s22">00:00</button>
+			<button class="w3-btn w3-grey" id="${p}s23">00:00</button>
+		</div>
+	</div>
+</div>
+<div style="margin-top: 30px">Activated time today: <span id="${p}activatedTime">0 seconds</span></div>`;
+		}
+
+
         const dev = false;
         const elem = (id) => document.querySelector("#" + id);
         const range = (n, step=1) => {
@@ -171,75 +178,83 @@
         	for (let i = 0; i < n; i+=step) answer.push(i)
         	return answer;
         }
-        const sD0 = elem("sD0");
-		const sD60 = elem("sD60");
-		const sD120 = elem("sD120");
-		const sD180 = elem("sD180");
-        const sD300 = elem("sD300");
-        const s = [
-	        elem("s0"), elem("s1"), elem("s2"), elem("s3"), elem("s4"), elem("s5"), elem("s6"), elem("s7"),
-	        elem("s8"), elem("s9"), elem("s10"), elem("s11"), elem("s12"), elem("s13"), elem("s14"), elem("s15"),
-	        elem("s16"), elem("s17"), elem("s18"), elem("s19"), elem("s20"), elem("s21"), elem("s22"), elem("s23")]
+		const elems = (pin) => {
+			pE = (s) => elem(`p${pin}-${s}`);
+			const d = Object.fromEntries(["sD0", "sD60", "sD120", "sD180", "sD300", "status", "activatedTime"].map(s => [s, pE(s)]))
+			d.s = range(24).map(i => pE(`s${i}`));
+			return d;
+		}
+		const pins = [20, 21]; // -------------------------------------------------------------------------------------------------------- change this into the pin that you use
+		elem("uis").innerHTML = pins.map(pin => generateHtml(pin)).join("");
 
-		const status = elem("status");
-		const activatedTime = elem("activatedTime");
 		let lastClock = Date.now() / 1000;
-		let state = {};
+		let states = {};
 
-	    const updateScheduleUI = () => {
-		    for (const hourWindow of range(24))
-		    	s[hourWindow].changeStyles(state.schedule[hourWindow] === 1);
-		    sD0.changeStyles(state.scheduleDuration === 0);
-		    sD60.changeStyles(state.scheduleDuration === 60);
-		    sD120.changeStyles(state.scheduleDuration === 120);
-		    sD180.changeStyles(state.scheduleDuration === 180);
-		    sD300.changeStyles(state.scheduleDuration === 300);
-	    }
-	    updateScheduleUI();
-
-		setInterval(() => {
-			const now = Date.now() / 1000;
-			update({remaining: Math.max(state.remaining - (now - lastClock), -1)})
-			lastClock = now;
-		}, 1000);
-
+		const ds = Object.fromEntries(pins.map(pin => [pin, elems(pin)]));
 		const formatTime = (seconds) => {
 			const minutes = Math.floor(seconds / 60)
 			seconds = Math.floor(seconds % 60)
 			return (minutes > 0 ? minutes + " minutes and " : "") + seconds + " seconds";
 		}
-		const update = (_state) => {
-			const scheduleChanged = !state.schedule.equals(_state.schedule);
-			state = {...state, ..._state}
-			if (scheduleChanged) updateScheduleUI();
-			if (state.remaining > 0) {
-				status.innerHTML = "On. Turns off in " + formatTime(state.remaining)
-			} else {
-				status.innerHTML = "Off";
-			}
-			activatedTime.innerHTML = formatTime(state["activatedTime"]);
+		const updateScheduleUI = (pin) => {
+			d = ds[pin]; state = states[pin];
+			for (const hourWindow of range(24))
+				d.s[hourWindow].changeStyles(state.schedule[hourWindow] === 1);
+			d.sD0.changeStyles(state.scheduleDuration === 0);
+			d.sD60.changeStyles(state.scheduleDuration === 60);
+			d.sD120.changeStyles(state.scheduleDuration === 120);
+			d.sD180.changeStyles(state.scheduleDuration === 180);
+			d.sD300.changeStyles(state.scheduleDuration === 300);
 		}
 
+		const update = (pin, _state) => {
+			const d = ds[pin];
+			states[pin] = {...states[pin], ..._state};
+			console.log(pin, states[pin]);
+			const scheduleChanged = !states[pin].schedule.equals(_state.schedule);
+			if (scheduleChanged) updateScheduleUI(pin);
+			if (states[pin].remaining > 0) {
+				d.status.innerHTML = "On. Turns off in " + formatTime(states[pin].remaining)
+			} else {
+				d.status.innerHTML = "Off";
+			}
+			d.activatedTime.innerHTML = formatTime(states[pin].activatedTime);
+		}
+		const updateAll = (states) => {
+			for (const pin of pins) update(pin, states[pin]);
+		}
+
+		setInterval(() => {
+			const now = Date.now() / 1000;
+			for (const pin of pins) update(pin, {remaining: Math.max(states[pin].remaining - (now - lastClock), -1)})
+			lastClock = now;
+		}, 1000);
+
+		pins.map(pin => updateScheduleUI(pin));
+
 		const get = (url, retry=true) => {
-			fetch(url).then(response => response.json()).then(data => update(data)).catch((error) => {
+			fetch(url).then(response => response.json()).then(data => updateAll(data)).catch((error) => {
 				if (!dev) {
 					toast.noInternet(retry);
 					if (retry) get(url, retry);
 				}
 			});
 		}
-		const turnOff = () => get("turnOff");
-		const turnOn = (seconds) => get("turnOn/" + seconds);
-		const changeSchedule = (hourWindow) => get("/changeSchedule/" + hourWindow);
-		const changeScheduleDuration = (seconds) => get("/changeScheduleDuration/" + seconds);
+		const turnOff = (pin) => get(`turnOff/${pin}`);
+		const turnOn = (pin, seconds) => get(`turnOn/${pin}/${seconds}`);
+		const changeSchedule = (pin, hourWindow) => get(`/changeSchedule/${pin}/${hourWindow}`);
+		const changeScheduleDuration = (pin, seconds) => get(`/changeScheduleDuration/${pin}/${seconds}`);
 
-		for (const hourWindow of range(24)) 
-			s[hourWindow].onclick = () => changeSchedule(hourWindow);
-		sD0.onclick = () => changeScheduleDuration(0);
-		sD60.onclick = () => changeScheduleDuration(60);
-		sD120.onclick = () => changeScheduleDuration(120);
-		sD180.onclick = () => changeScheduleDuration(180);
-		sD300.onclick = () => changeScheduleDuration(300);
+		for (const pin of pins) {
+			const d = ds[pin];
+			for (const hourWindow of range(24)) 
+				d.s[hourWindow].onclick = () => changeSchedule(pin, hourWindow);
+			d.sD0.onclick = () => changeScheduleDuration(pin, 0);
+			d.sD60.onclick = () => changeScheduleDuration(pin, 60);
+			d.sD120.onclick = () => changeScheduleDuration(pin, 120);
+			d.sD180.onclick = () => changeScheduleDuration(pin, 180);
+			d.sD300.onclick = () => changeScheduleDuration(pin, 300);
+		}
 
 		setInterval(() => get("state", false), 5000);
 	</script>
